--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /*
 	Theme Name: OsixthreeO
 	Text Domain: osixthreeo
-	Version: 1.4.1
+	Version: 1.4.2
 	Description: A flexibile, lightweight, multi-purpose theme with a colorful header and heaps of customizer controls for crafting a unique design with no code or plugins.
 	Tags: translation-ready, theme-options, full-width-template, footer-widgets, featured-images, custom-logo, custom-background, flexible-header, grid-layout
 	Author: Chip Sheppard
@@ -1905,7 +1905,8 @@ img.alignright,
 /*
  * Wide & Full width images
  ---------------------------------- */
-.alignwide {
+.alignwide,
+.entry-content ul.wp-block-gallery.alignwide {
   margin-left: -40px;
   margin-right: -40px;
   width: auto;
@@ -1913,13 +1914,15 @@ img.alignright,
 }
 
 @media all and (max-width: 640px) {
-  .alignwide {
+  .alignwide,
+  .entry-content ul.wp-block-gallery.alignwide {
     margin-left: -5%;
     margin-right: -5%;
   }
 }
 
-.alignfull {
+.alignfull,
+.entry-content ul.wp-block-gallery.alignfull {
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   width: auto;
